<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.state.memo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_writePostFragment"
            app:destination="@id/writePostFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.state.memo.ui.reminder.ReminderFragment"
        android:label="@string/title_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.state.memo.ui.setttings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/writePostFragment"
        android:name="com.state.memo.ui.createpost.CreatePostFragment"
        android:label="write_post_fragment"
        tools:layout="@layout/create_post_fragment" >
        <action
            android:id="@+id/action_writePostFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>